public/styles.css
/* ... */
.topButton:hover {
    background: #ff4040;
    color: white;
}

.backgroundSlider {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 800vh;
    background: #2e313b;
    z-index: -2;
}

.backgroundSlider2 {
    position: absolute;
    top: 100vh;
    left: 0;
    width: 100%;
    height: 500vh;
    background: #1d2129;
    z-index: -1;
}

.banner1 {
    top: 100vh;
    left: 50%;
    transform: translateX(-50%);
    position: absolute;
    width: 100%;
    max-width: 1500px;
    height: 200vh;
    background-color: #2e313b;
    /* background: linear-gradient(to left, rgb(48, 48, 48), rgb(82, 82, 82)); */
    z-index: 1;
}

section {
    display: flex;
    height: 85vh;
    justify-content: center;
    align-items: center;
}

section3 {
    margin-top: 650px;
    height: 500px;
    display: flex;
    justify-content: center;
    align-items: center;
}

section2 {
    display: flex;
    height: 95vh;
    /* justify-content: center; */
    /* align-items: center; */
    position: relative;
}

/* h4 {
    color: #555;
    font-weight: normal;
  } */

  .headline2 p {
      color: white;
      margin-bottom: 30px;
  }

  .headline2 {
    position: absolute;
    color: white;
    align-items: left;
    max-width: 40vw;
    top: 50%;
    left: 31%;
    transform: translate(-50%, -50%);
    /* text-align: center; */
    z-index: 3;
}

.headline2 h1 {
  margin-bottom: 30px;
  font-size: 80px;
}

.headline3 {
    position: absolute;
    top: 0;
    width: 80vw;
    z-index: 3;
}

/* content--------------------------------------------- */

.mainTitle {
    margin-top: 200px;
    text-align: center;
    color: white;
    margin-bottom: 50px;
    padding-left: 25px;
    padding-right: 25px;
}

.mainTitle h1 {
    margin-bottom: 20px;
    font-size: 50px;
}

.mainTitle p {
    color: #8a8a8a;
}

/* content { */
    /* margin-top: 50vh; */
    /* padding: 0; */
    /* display: flex; */
    /* justify-content: center; */
    /* background: #23E3C9; */
/* } */

.paddingSpacing {
    padding-right: 25px;
    padding-left: 25px;
}

.slider{
    /* margin-right: 10vh; */
    z-index: 3;
    max-width: 1280px;
    /* height: auto; */
    /* border-radius: 10px; */
    overflow: hidden;
    margin-left: auto;
    margin-right: auto;
    position: relative;
}

.slides{
    width: 500%;
    height: 500px;
    display: flex;
}

.slides input{
    display: none;
}

/* .slide first {
    position: relative;
} */

.slide{
    width: 20%;
    transition: 2s;
}

.slide img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    vertical-align: middle;

}

.navigation-manual{
    position: absolute;
    width: 1280px;
    margin-top: -40px;
    display: flex;
    justify-content: center;
    left: 50%;
    transform: translateX(-50%);
}

.manual-btn{
    border:2px solid #2e313b;
    padding: 5px;
    border-radius: 10px;
    cursor: pointer;
    transition: 1s;
}

.manual-btn:not(:last-child){
    margin-right: 40px;
}

.manual-btn:hover{
    background: #2e313b;
}

#radio1:checked ~ .first{
    margin-left: 0;
}

#radio2:checked ~ .first{
    margin-left: -20%;
}

#radio3:checked ~ .first{
    margin-left: -40%;
}

#radio4:checked ~ .first{
    margin-left: -60%;
}

.navigation-auto{
    position:absolute;
    display: flex;
    width: 1280px;
    justify-content: center;
    margin-top: 460px;
    left: 50%;
    transform: translateX(-50%);
}

.navigation-auto div{
    border: 2px solid #2e313b;
    padding: 5px;
    border-radius: 10px;
    transition: 1s;
}

.navigation-auto div:not(:last-child){
    margin-right: 40px;
}

#radio1:checked ~ .navigation-auto .auto-btn1{
    background: #2e313b;
}

#radio2:checked ~ .navigation-auto .auto-btn2{
    background: #2e313b;
}

#radio3:checked ~ .navigation-auto .auto-btn3{
    background: #2e313b;
}

#radio4:checked ~ .navigation-auto .auto-btn4{
    background: #2e313b;
}

/* SECOND SLIDER------------------------------------- */

.slider2{
    /* margin-right: 10vh; */
    z-index: 3;
    max-width: 1280px;
    /* height: auto; */
    /* border-radius: 10px; */
    overflow: hidden;
    margin-left: auto;
    margin-right: auto;
    position: relative;
}

.slides2{
    width: 500%;
    height: 500px;
    display: flex;
}

.slides2 input{
    display: none;
}

/* .slide first {
    position: relative;
} */

.slide2{
    width: 20%;
    transition: 2s;
}

.slide2 img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    vertical-align: middle;
}

.navigation-manual2{
    position: absolute;
    width: 1280px;
    margin-top: -40px;
    display: flex;
    justify-content: center;
    left: 50%;
    transform: translateX(-50%);
}

.manual-btn2{
    border:2px solid #2e313b;
    padding: 5px;
    border-radius: 10px;
    cursor: pointer;
    transition: 1s;
}

.manual-btn2:not(:last-child){
    margin-right: 40px;
}

.manual-btn2:hover{
    background: #2e313b;
}

#radioTwo1:checked ~ .first2{
    margin-left: 0;
}

#radioTwo2:checked ~ .first2{
    margin-left: -20%;
}

#radioTwo3:checked ~ .first2{
    margin-left: -40%;
}

#radioTwo4:checked ~ .first2{
    margin-left: -60%;
}

.navigation-auto2{
    position:absolute;
    display: flex;
    width: 1280px;
    justify-content: center;
    margin-top: 460px;
    left: 50%;
    transform: translateX(-50%);
}

.navigation-auto2 div{
    border: 2px solid #2e313b;
    padding: 5px;
    border-radius: 10px;
    transition: 1s;
}

.navigation-auto2 div:not(:last-child){
    margin-right: 40px;
}

#radioTwo1:checked ~ .navigation-auto2 .auto-btnTwo1{
    background: #2e313b;
}

#radioTwo2:checked ~ .navigation-auto2 .auto-btnTwo2{
    background: #2e313b;
}

#radioTwo3:checked ~ .navigation-auto2 .auto-btnTwo3{
    background: #2e313b;
}

#radioTwo4:checked ~ .navigation-auto2 .auto-btnTwo4{
    background: #2e313b;
}

/* THIRD SLIDER------------------------------------- */

.slider3Container {
    height: 800px;
}
/* ... */

